# Optimized_Gemm

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/: clocks.h  generate.h  matrix_mul_base.h
include/optimize_core/: float_matrix_mul.h  float_mm_with_simd.h
tests/: TEST_clock.cpp  TEST_combined.cpp  TEST_fl_matrix_mul.cpp  TEST_generate.cpp
